--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>j3</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>j3 Maven Webapp</name>
+    <name>j3 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
       <dependency>
@@ -15,9 +15,15 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.1.0</version>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>3.1.0</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>6.0</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -25,6 +31,11 @@
         <artifactId>jsp-api</artifactId>
         <version>2.0</version>
         <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>jstl</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.2</version>
       </dependency>
   </dependencies>
   <build>
